[JAVA-20625] Upgraded testing-modules to jdk9-and-above profile